[tool.poetry]
name = "aoclib"
version = "0.1.0"
description = "A library for solving AdventOfCode problems using Python."
authors = ["Unknown15082 <trangiahuy15082006@gmail.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
